<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- 活动主题 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

    	<EditText
            android:id="@+id/activityTheme"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
        	android:singleLine="true"
        	android:hint="@string/activityThemeHint"
            />
    	
    </LinearLayout>
    
    <!-- 活动时间 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >
    	
        <TextView
            android:layout_width="wrap_content"
        	android:layout_height="match_parent"
        	android:gravity="center"
        	android:textSize="20sp"
        	android:textColor="#ff0000"
        	android:text="@string/activityTime" />          	

        <RelativeLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content" >
        	
            <ListView
            	android:id="@+id/timeList"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content" >
        	</ListView>
         </RelativeLayout>
        
        <Button
            android:id="@+id/addTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addActivityTime" />
        
    </LinearLayout>
    
    <!-- 活动地点 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >
    	
        <TextView
            android:layout_width="wrap_content"
        	android:layout_height="match_parent"
        	android:gravity="center"
        	android:textSize="20sp"
        	android:textColor="#ff0000"
        	android:text="@string/activityLocation" />          	

        <TextView
            android:id="@+id/locationList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""
            android:textSize="20sp" />


        <Button
            android:id="@+id/addLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addActivityLocation" />
        
    </LinearLayout>
    
    <!-- 活动参与者 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >
    	

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/activityParticipant"
            android:textColor="#ff0000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/participantList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""
            android:textSize="20sp" />

        <Button
            android:id="@+id/addParticipant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addActivityParticipant" />
        
    </LinearLayout>
    
    <!-- 活动备注 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >
        
        <EditText
            android:id="@+id/activityDuration"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
        	android:singleLine="true"
        	android:numeric="integer"
        	android:hint="@string/activityDuration"
            />
        <EditText
            android:id="@+id/activityRemarks"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
        	android:singleLine="true"
        	android:hint="@string/activityremarks"
            />
        
    </LinearLayout>
    
    <!-- 是否公开 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/activityVisibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activityVisibility" />

        <Button
            android:id="@+id/submitActivityBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submitActivityBtn" />
        
    </LinearLayout>

</LinearLayout>

</ScrollView>